# caom2tools

./: .gitignore  .gitmodules  .publish.sh  .travis.yml  Dockerfile27  Dockerfile27-exec  Dockerfile363  Dockerfile363-exec  Dockerfile363-test  README.md  README.rst  dev_requirements.txt  docker-entrypoint-exec.sh  docker-entrypoint.sh  docker-run-cmd.sh  setup.cfg  setup.py
caom2/: README.md  README.rst  dev_requirements.txt  setup.cfg  setup.py  tox.ini
caom2/caom2/: __init__.py  artifact.py  caom_object.py  caom_util.py  caom_validator.py  checksum.py  chunk.py  common.py  dali.py  diff.py  enum.py  obs_reader_writer.py  observation.py  part.py  plane.py  shape.py  version.py  wcs.py
caom2/caom2/data/: CAOM-2.4.xsd
caom2/caom2/test/: caom_test_instances.py  test_caom_object.py  test_chunk.py  test_obs_reader_writer.py  test_observation.py  test_part.py  test_plane.py  test_shape.py  test_wcs.py
caom2/caom2/test/data/: CompleteCompositeCircle-CAOM-2.1.xml  CompleteCompositePolygon-CAOM-2.2.xml  CompleteSimpleCircle-CAOM-2.1.xml
caom2/caom2/tests/: caom_test_instances.py  test_artifact.py  test_caom_object.py  test_caom_util.py  test_caom_validator.py  test_checksum.py  test_chunk.py  test_common.py  test_dali.py  test_diffs.py  test_obs_reader_writer.py  test_observation.py  test_part.py  test_plane.py  test_shape.py  test_wcs.py  xml_compare.py
caom2/caom2/tests/data/: CompleteCompositeCircle-CAOM-2.2.xml  CompleteCompositeCircle-CAOM-2.3.xml  CompleteCompositeCircle.xml  CompleteCompositePolygon-CAOM-2.1.xml  CompleteCompositePolygon-CAOM-2.3.xml  CompleteCompositePolygon.xml  CompleteSimpleCircle-CAOM-2.2.xml  CompleteSimpleCircle-CAOM-2.3.xml  CompleteSimpleCircle.xml  CompleteSimplePolygon-CAOM-2.1.xml  CompleteSimplePolygon-CAOM-2.2.xml  CompleteSimplePolygon-CAOM-2.3.xml  CompleteSimplePolygon.xml  MinimalCompositeCircle-CAOM-2.1.xml  MinimalCompositeCircle-CAOM-2.3.xml  MinimalCompositePolygon-CAOM-2.2.xml  MinimalCompositePolygon-CAOM-2.3.xml  MinimalSimpleCircle-CAOM-2.3.xml  MinimalSimpleCircle.xml  MinimalSimplePolygon-CAOM-2.2.xml  MinimalSimplePolygon-CAOM-2.3.xml  SampleComposite-CAOM-2.3.xml  SampleDerived-CAOM-2.4.xml  SampleSimple-CAOM-2.3.xml  diff-actual-CAOM-2.3.xml  diff-actual-CAOM-2.4.xml  diff-expected-CAOM-2.3.xml  diff-expected-CAOM-2.4.xml  diff-failure-actual-CAOM-2.4.xml  diff-failure-expected-CAOM-2.4.xml
caom2/caom2repoClient/: MANIFEST.in  build.xml  setup.cfg  setup.py
caom2/caom2repoClient/caom2repoClient/: __init__.py  caom2repoClient.py
caom2/caom2repoClient/scripts/: caom2repo.py
caom2/caom2repoClient/test/data/: CAOM-2.0.xsd  simple.xml
caom2/caom2repoClient/test/scripts/: test_caom2repo.sh
caom2/pyCAOM2/: Dependencies.txt  build.xml  setup.py
caom2/pyCAOM2/caom2/: __init__.py  caom2_algorithm.py  caom2_artifact.py  caom2_chunk.py  caom2_composite_observation.py  caom2_energy.py  caom2_energy_transition.py  caom2_entity.py  caom2_enums.py  caom2_environment.py  caom2_exceptions.py  caom2_instrument.py  caom2_metrics.py  caom2_object.py  caom2_observation.py  caom2_observation_uri.py  caom2_part.py  caom2_plane.py  caom2_plane_uri.py  caom2_polarization.py  caom2_position.py  caom2_proposal.py  caom2_provenance.py  caom2_simple_observation.py  caom2_target.py  caom2_telescope.py  caom2_time.py  enum.py
caom2/pyCAOM2/caom2/test/: caom2testinstances.py  test_algorithm.py  test_artifact.py  test_axis.py  test_caom2_entity.py  test_caom2_enums.py  test_caom2_util.py  test_chunk.py  test_composite_observation.py  test_coord2d.py  test_coord_axis1d.py  test_coord_axis2d.py  test_coord_bounds1d.py  test_coord_circle2d.py  test_coord_error.py  test_coord_function1d.py  test_coord_function2d.py  test_coord_polygon2d.py  test_coord_range1d.py  test_coord_range2d.py  test_dimension2d.py  test_energy.py  test_energy_transition.py  test_environment.py  test_instrument.py  test_metrics.py  test_observable_axis.py  test_observation.py  test_observation_reader_writer.py  test_observation_uri.py  test_part.py  test_plane.py  test_plane_uri.py  test_polarization.py  test_polarization_wcs.py  test_position.py  test_proposal.py  test_provenance.py  test_ref_coord.py  test_simple_observation.py  (+7 more)
caom2/pyCAOM2/caom2/types/: __init__.py  caom2_box.py  caom2_circle.py  caom2_interval.py  caom2_point.py  caom2_polygon.py  caom2_vertex.py
caom2/pyCAOM2/caom2/util/: caom2_util.py  caom2_validator.py
caom2/pyCAOM2/caom2/wcs/: __init__.py  caom2_axis.py  caom2_coord2d.py  caom2_coord_axis1d.py  caom2_coord_axis2d.py  caom2_coord_bounds1d.py  caom2_coord_circle2d.py  caom2_coord_error.py  caom2_coord_range1d.py  (+12 more)
caom2/pyCAOM2/test/: test_roundtrip.py
caom2repo/: Dockerfile  README.md  README.rst  dev_requirements.txt  setup.cfg  setup.py  tox.ini
caom2repo/caom2repo/: __init__.py  core.py
caom2repo/caom2repo/test/: addplaneplugin.py  passplugin.py  test_core.py
caom2repo/caom2repo/tests/: __init__.py  addplaneplugin.py  artifacturiplugin.py  errorplugin.py  noaoartifacturiplugin.py  passplugin.py  test_core.py
caom2repo/tests/: README  test-integration.py  visitor-plugin.py
caom2utils/: README.rst  dev_requirements.txt  setup.cfg  setup.py  tox.ini
caom2utils/caom2utils/: __init__.py  blueprints.py  cadc_client_wrapper.py  caom2blueprint.py  caomvalidator.py  core.py  data_util.py  fits2caom2.py  legacy.py  parsers.py  polygonvalidator.py  version.py  wcs_parsers.py  wcs_util.py  wcsvalidator.py
caom2utils/caom2utils/tests/: compare.py  conftest.py  test_ConvertFromJava.py  test_cadc_client_wrapper.py  test_caomvalidator.py  test_collections.py  test_compare.py  test_convert_from_java.py  test_core.py  test_custom_axis_util.py  test_custom_util.py  test_data_util.py  test_fits2caom2.py  test_integration.py  test_obs_blueprint.py  test_observation_blueprint.py  test_polygonvalidator.py  test_si_uris.py  test_wcsvalidator.py
caom2utils/tests/: test_compare.py  test_integration.py
caom2utils/tests/data/: 1709071o.fits.fz  cfhtwircam.override  cfhtwircam.xml  cgps.config  cgps.default  cgps.defaults  cgps.xml  cgps_local.xml
(+466 files in other folders)
