[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = caom2tools
description = Astropy affiliated package
long_description = This is a package for handling Common Archive Observation Model (CAOM2). CAOM2 is a general purpose data model for use as the core data model of an astronomical data centre. 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = BSD
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/caom2
edit_on_github = False
github_project = opencadc/caom2tools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev

[entry_points]
astropy-package-template-example = caom2tools.example_mod:main
