[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = caom2

[bdist_wheel]
universal=1

[metadata]
package_name = caom2
description = CAOM-2.4 library
long_description = Python library for the CAOM-2.4 data model
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/caom2
edit_on_github = False
github_project = opencadc/caom2tools
install_requires =
    future aenum six deprecated
    lxml<=4.3.0;python_version=="3.4"
    lxml>=3.7.0;python_version>="3.5"
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 2.4.0rc2


[entry_points]
caom2-checksum = caom2.checksum:checksum_diff
