[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = caom2repo

[metadata]
package_name = caom2repo
description = CAOM-2.3 repo access and tools
long_description = Tools for accessing a repo for the CAOM-2.3 data model
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/caom2
edit_on_github = False
github_project = opencadc/caom2tools
install_requires = cadcutils>=1.1.9 caom2>=2.3.6
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 1.4.2



[entry_points]
caom2-repo = caom2repo.core:main_app
