[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
testpaths = caom2repo

[flake8]
max-line-length = 120

[metadata]
package_name = caom2repo
description = CAOM-2.4 repo access and tools
long_description = Tools for accessing a repo for the CAOM-2.4 data model
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/caom2
edit_on_github = False
github_project = opencadc/caom2tools
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 1.6.1

[options]
install_requires =
    cadcutils>=1.5.1
    caom2>=2.6

[options.extras_require]
test =
    pytest
    pytest-cov>=2.5.1
    flake8>=3.4.1
    funcsigs==1.0.2
    xml-compare>=1.0.5

[entry_points]
caom2-repo = caom2repo.core:main_app
