[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = caom2utils

[metadata]
package_name = caom2utils
description = CAOM-2.3 utils
long_description = Tools to faciliate using the CAOM-2.3 data model
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/caom2
edit_on_github = False
github_project = opencadc/caom2tools
install_requires = cadcdata>=1.2.1 caom2>=2.3.5 astropy>=2.0 spherical-geometry>=1.1.0
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 1.2



[entry_points]
fits2caom2 = caom2utils.legacy:main_app
caom2gen = caom2utils.fits2caom2:caom2gen
